--- a/main.css
+++ b/main.css
@@ -4,9 +4,6 @@ body {
   padding: 0;
   background: linear-gradient(to bottom, #c4d1c4, #fff, #c4d1c4, #fff, #c4d1c4),
     no-repeat;
-	
-
-	
 }
 h1 {
   display: none;
@@ -313,63 +310,61 @@ footer {
   background: url(img/list4.png) no-repeat;
 }
 
-
-
-
-
-#wrapper-modal, #wrapper-modal2 {
-    width: 100%;
-    height: 100%;
-    display: none;
+#wrapper-modal,
+#wrapper-modal2 {
+  width: 100%;
+  height: 100%;
+  display: none;
 }
 
 #wrapper-modal.active {
-    display: block;
+  display: block;
 }
 #wrapper-modal2.active {
-    display: block;
+  display: block;
 }
-#overlay, #overlay2 {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.863);
-    opacity: 0.7;
-}
-
-#modal-window, #modal-window2 {
-	padding:30px;
-    position: absolute;
-    top: 120%;
-    width: 1110px;
-    height: 270px;
-    z-index: 2;
-	background: #fff;
-    background-image: url(img/backmail.png); 
-}
-#modal-window2{
-	top:30%;
-}
-.content , .content2{
-	text-align: center;
-}
-.content p, .content2 p{
-	font-size: 35px;
-}
-.modal-btn,.modal-btn2 {
-	display: flex;
-	justify-content: center;
-}
-#btn-close, #btn-close2{
-	margin:0px;
+#overlay,
+#overlay2 {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.863);
+  opacity: 0.7;
 }
 
-
-
-
-
+#modal-window,
+#modal-window2 {
+  padding: 30px;
+  position: absolute;
+  top: 120%;
+  width: 1110px;
+  height: 270px;
+  z-index: 2;
+  background: #fff;
+  background-image: url(img/backmail.png);
+}
+#modal-window2 {
+  top: 30%;
+}
+.content,
+.content2 {
+  text-align: center;
+}
+.content p,
+.content2 p {
+  font-size: 35px;
+}
+.modal-btn,
+.modal-btn2 {
+  display: flex;
+  justify-content: center;
+}
+#btn-close,
+#btn-close2 {
+  margin: 0px;
+}
 
 @media screen and (max-width: 1200px) {
   .container {
@@ -458,11 +453,11 @@ footer {
   .image {
     width: 255px;
   }
-  .cardtwo{
-	margin-top: 0px;
+  .cardtwo {
+    margin-top: 0px;
   }
-  .image{
-	margin-bottom: 30px;
+  .image {
+    margin-bottom: 30px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -535,7 +530,9 @@ footer {
   header {
     text-align: center;
   }
-
+  .image {
+    height: 430px;
+  }
   .navigation {
     margin-top: 20px;
     display: block;
